# bv

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  V1_RELEASE_NOTES.md  deny.toml  install.sh
.github/workflows/: bv-publish.yml  ci.yml  release.yml
bv-bench/: Cargo.toml
bv-bench/src/: fixture.rs  harness.rs  lib.rs  main.rs  report.rs
bv-builder/: Cargo.toml
bv-builder/src/: build.rs  layering.rs  lib.rs  main.rs  oci.rs  popularity.rs  registry.rs  resolve.rs  spec.rs
bv-cli/: Cargo.toml
bv-cli/src/: cli.rs  errors.rs  main.rs  mounts.rs  ops.rs  progress.rs  pull_native.rs  registry.rs  runtime_select.rs  shims.rs
bv-cli/src/commands/: add.rs  cache.rs  conform.rs  data.rs  doctor.rs  exec.rs  export.rs  list.rs  lock.rs  mod.rs  remove.rs  run.rs  search.rs  shell.rs  show.rs  sync.rs  update.rs  why.rs
bv-cli/src/commands/snapshots/: bv__commands__show__tests__json_output_snapshot.snap
bv-cli/src/publish/: auth.rs  build.rs  detect.rs  mod.rs  pr.rs  scaffold.rs  source.rs
bv-cli/tests/: integration.rs
bv-conformance/: Cargo.toml
bv-conformance/src/: assertions.rs  inputs.rs  lib.rs  runner.rs
bv-core/: Cargo.toml
bv-core/src/: cache.rs  data.rs  error.rs  hardware.rs  lib.rs  lockfile.rs  manifest.rs  owned_images.rs  project.rs
bv-index/: Cargo.toml
bv-index/src/: backend.rs  git.rs  lib.rs
bv-runtime/: Cargo.toml
bv-runtime-apptainer/: Cargo.toml
bv-runtime-apptainer/src/: blob_cache.rs  cache.rs  gpu.rs  image.rs  lib.rs  mount.rs  runtime.rs  tail.rs
bv-runtime/src/: docker.rs  lib.rs  runtime.rs
bv-types/: Cargo.toml  types.toml
bv-types/src/: lib.rs  mime.rs  subtyping.rs  types.rs  vocabulary.rs
docs/: demo.md  fold.py  manifest-schema.md  scripting.md  types.md
