[workspace]
members = ["bv-cli", "bv-core", "bv-runtime", "bv-index", "bv-types"]
resolver = "2"

[workspace.package]
version = "0.1.1"
description = "A uv-style tool manager for bioinformatics."
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/mlberkeley/bv"
homepage = "https://github.com/mlberkeley/bv"
readme = "README.md"
