[package]
name = "bv-bench"
version.workspace = true
description = "Benchmark harness for bv install paths"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[[bin]]
name = "bv-bench"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "fs"] }
bv-core = { version = "0.1.0", path = "../bv-core" }
walkdir = "2.5.0"

[dev-dependencies]
tempfile = "3"
