[package]
name = "bv-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "bv"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.102"
bv-core = { version = "0.1.0", path = "../bv-core" }
bv-index = { version = "0.1.0", path = "../bv-index" }
bv-runtime = { version = "0.1.0", path = "../bv-runtime" }
chrono = { version = "0.4.44", features = ["serde"] }
clap = { version = "4.6.1", features = ["derive", "env"] }
indicatif = "0.18.4"
owo-colors = { version = "4.3.0", features = ["supports-colors"] }
semver = { version = "1.0.28", features = ["serde"] }
sha2 = "0.11.0"
tokio = { version = "1.52.1", features = ["rt-multi-thread", "macros", "sync"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }

[dev-dependencies]
tempfile = "3.27.0"
