[package]
name = "biov"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "A uv-style tool manager for bioinformatics: reproducible Docker-backed tools with digest-pinned lockfiles (installs as `bv`)"
keywords = ["bioinformatics", "docker", "reproducibility", "cli", "containers"]
categories = ["command-line-utilities", "science"]

[[bin]]
name = "bv"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.102"
bv-core = { version = "0.1.0", path = "../bv-core" }
bv-index = { version = "0.1.0", path = "../bv-index" }
bv-runtime = { version = "0.1.0", path = "../bv-runtime" }
chrono = { version = "0.4.44", features = ["serde"] }
clap = { version = "4.6.1", features = ["derive", "env"] }
indicatif = "0.18.4"
owo-colors = { version = "4.3.0", features = ["supports-colors"] }
futures-util = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["stream", "rustls-tls", "json"] }
toml = "1.1.2"
semver = { version = "1.0.28", features = ["serde"] }
sha2 = "0.11.0"
tokio = { version = "1.52.1", features = ["rt-multi-thread", "macros", "sync"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
serde_json = "1.0.149"
bv-types = { version = "0.1.0", path = "../bv-types" }
serde = { version = "1.0.228", features = ["derive"] }

[dev-dependencies]
insta = "1.47.2"

[dependencies.dialoguer]
version = "0.11"

[dependencies.keyring]
version = "3"

[dependencies.base64]
version = "0.22"

[dependencies.tempfile]
version = "3.27.0"
