[package]
name = "bv-conformance"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Conformance test runner for bv-registry manifests"

[dependencies]
bv-core = { version = "0.1.0", path = "../bv-core" }
bv-runtime = { version = "0.1.1", path = "../bv-runtime" }
anyhow = "1.0.102"
tempfile = "3.27.0"
