[package]
name = "bv-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Core types for biov: manifests, lockfile, cache layout, and error types"

[dependencies]
chrono = { version = "0.4.44", features = ["serde"] }
semver = { version = "1.0.28", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
sysinfo = "0.38.4"
thiserror = "2.0.18"
toml = "1.1.2"
