[package]
name = "bv-runtime-apptainer"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Apptainer/Singularity container runtime implementation for bv"

[dependencies]
bv-core = { version = "0.1.0", path = "../bv-core" }
bv-runtime = { version = "0.1.1", path = "../bv-runtime" }
sha2 = "0.11.0"
