[package]
name = "bv-runtime-apptainer"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Apptainer/Singularity container runtime implementation for bv"

[dependencies]
bv-core = { version = "0.1.0", path = "../bv-core" }
bv-runtime = { version = "0.1.1", path = "../bv-runtime" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.11.0"

[dev-dependencies]
tempfile = "3.27.0"
