[package]
name = "bv-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Container runtime trait and Docker implementation for biov"

[dependencies]
bv-core = { version = "0.1.0", path = "../bv-core" }
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.18"
